Add modification for differents files

--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,11 @@
 {{> header}}
     <form action="">
         <p>
-            <label for="mail"></label>
+            <label for="mail">Email</label>
             <input id="mail" type="email" name="mail">
         </p>
         <p>
-            <label for="acces"></label>
+            <label for="acces">Mot de pass</label>
             <input id="acces" type="password" name="access">
         </p>
     </form>
