--- a/views/footer.html
+++ b/views/footer.html
@@ -1,6 +1,8 @@
-<ul>
-    <li>Aide</li>
-    <li>À propos</li>
-</ul>
+<footer>
+    <a href=""><img src="/3225191_app_instagram_logo_media_popular_icon.png" alt="logo-instragram"></a>
+    <a href=""><img src="317725_linkedin_social_icon.png" alt="logo-linkedin"></a>
+    <div>À propos de nous</div>
+</footer>
+</main>
 </body>
 </html>
