--- a/views/header.html
+++ b/views/header.html
@@ -2,12 +2,15 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>e-education</title>
+    <link rel="stylesheet" href="/design.css">
 </head>
 <body>
-    <ul>
-        <li><a href="">s'incrire</a></li>
-        <li><a href="">connecter</a></li>
-        <li><a href="">déconnecter</a></li>
-    </ul>
-
+<main>
+    <header id="header" class="header_elements">
+        <div id="first_year"><a href="">Première année</a></div>
+        <div id="second_year"><a href="">deuxième année</a></div>
+        <div id="register"><a href="/new_user.html">s'incrire</a></div>
+        <div  id="login"><a href="/login.html">connecter</a></div>
+        <div  id="sign_out">déconnecter</div>
+    </header>
