change contain of this files

--- a/views/subject.html
+++ b/views/subject.html
@@ -1,6 +1,6 @@
 {{> header}}
-    {{#mytitle}}
-    <div class="subject"><i></i><a href="">{{title}}</a></div>
-    {{/mytitle}}
+    {{#Level}}
+    <div>{{subject}}</div>
+    {{/Level}}
 {{> footer}}
 
