--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,16 @@
 {{> header}}
-    <form action="">
+    <form action="/login" method="post">
         <p>
-            <label for="mail">Email</label>
-            <input id="mail" type="email" name="mail">
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" placeholder="Votre email">
         </p>
         <p>
             <label for="acces">Mot de pass</label>
-            <input id="acces" type="password" name="access">
+            <input id="acces" type="password" name="password" placeholder="Mot de passe">
+        </p>
+        <p>
+            <label for="send"></label>
+            <input id="send" type="submit" name="send" value="Envoyer">
         </p>
     </form>
 {{> footer}}
