--- a/views/new_user.html
+++ b/views/new_user.html
@@ -1,20 +1,24 @@
 {{> header}}
-    <form>
+    <form action="/new_user" method="post">
         <p>
-            <label for="firstname"></label>
-            <input id="firstname" type="text" name="firstname">
+            <label for="firstname">Prénonom</label>
+            <input id="firstname" type="text" name="firstName" placeholder="Prénom">
         </p>
         <p>
-            <label for="lastname" ></label>
-            <input id="lastname" type="text" name="lastname">
+            <label for="lastname" >Nom</label>
+            <input id="lastname" type="text" name="lastName" placeholder="Nom">
         </p>
         <p>
-            <label for="mail"></label>
-            <input id="mail" type="email" name="mail">
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" placeholder="Email">
         </p>
         <p>
-            <label for="acces"></label>
-            <input id="acces" type="password" name="acces">
+            <label for="password">Mot de passe</label>
+            <input id="password" type="password" name="password" placeholder="Mot de passe">
+        </p>
+        <p>
+            <label for="bottom"></label>
+            <input id="bottom" type="submit" name="buttom" value="s'incrire">
         </p>
     </form>
 {{> footer}}
