--- a/views/login.html
+++ b/views/login.html
@@ -2,11 +2,11 @@
     <form action="/login" method="post">
         <p>
             <label for="email">Email</label>
-            <input id="email" type="email" name="email" placeholder="Votre email">
+            <input class="register" id="email" type="email" name="email" placeholder="Votre email">
         </p>
         <p>
             <label for="acces">Mot de pass</label>
-            <input id="acces" type="password" name="password" placeholder="Mot de passe">
+            <input class="register" id="acces" type="password" name="password" placeholder="Mot de passe">
         </p>
         <p>
             <label for="send"></label>
