--- a/views/new_user.html
+++ b/views/new_user.html
@@ -1,24 +1,23 @@
 {{> header}}
     <form action="/new_user" method="post">
         <p>
-            <label for="firstname">Prénonom</label>
-            <input id="firstname" type="text" name="firstName" placeholder="Prénom">
+            <label for="firstname">Prénom</label><br>
+            <input class="register" id="firstname" type="text" name="firstName" placeholder="Prénom">
         </p>
         <p>
-            <label for="lastname" >Nom</label>
-            <input id="lastname" type="text" name="lastName" placeholder="Nom">
+            <label for="lastname" >Nom</label><br>
+            <input class="register" id="lastname" type="text" name="lastName" placeholder="Nom">
         </p>
         <p>
-            <label for="email">Email</label>
-            <input id="email" type="email" name="email" placeholder="Email">
+            <label for="email">Email</label><br>
+            <input class="register" id="email" type="email" name="email" placeholder="Email">
         </p>
         <p>
-            <label for="password">Mot de passe</label>
-            <input id="password" type="password" name="password" placeholder="Mot de passe">
+            <label for="password">Mot de passe</label><br>
+            <input class="register" id="password" type="password" name="password" placeholder="Mot de passe">
         </p>
         <p>
-            <label for="bottom"></label>
-            <input id="bottom" type="submit" name="buttom" value="s'incrire">
+            <input id="botton" type="submit" name="button" value="s'incrire">
         </p>
     </form>
 {{> footer}}
