--- a/views/Licence2.html
+++ b/views/Licence2.html
@@ -1,4 +1,4 @@
-{{> header}}
+{{> header2}}
     <h1>Les matières de la licence 2</h1>
     {{#Level}}
         <div><a id = "id_{{subject}}" href="{{subject}}"> {{subject}} </a></div>
