--- a/views/Licence1.html
+++ b/views/Licence1.html
@@ -1,4 +1,4 @@
-{{> header}}
+{{> header2}}
     <h1>Les matières de la licence 1</h1>
     {{#Level}}
     <div><a href="{{subject}}">{{subject}}</a></div>
