--- a/views/ProgrammationC.html
+++ b/views/ProgrammationC.html
@@ -1,4 +1,4 @@
-{{> header}}
+{{> header2}}
 <h1>Cours de programmation C et systèmes</h1>
 {{#Course}}
 <div>titre : {{title}}  <a href="{{file}}"> Cours au format PDF</a>  <a href="{{movie}}"> Cours au format vidéo</a></div>
