--- a/views/footer.html
+++ b/views/footer.html
@@ -1,7 +1,7 @@
 <footer>
      <div id="contacts">Nos contacts</div>
     <a href=""><img id="logo_instagramm" src="/3225191_app_instagram_logo_media_popular_icon.png" alt="logo-instragram"></a>
-    <a href=""><img id="logo_linkedin" src="317725_linkedin_social_icon.png" alt="logo-linkedin"></a>
+    <a href="https://www.linkedin.com/feed/"><img id="logo_linkedin" src="317725_linkedin_social_icon.png" alt="logo-linkedin"></a>
 </main>
 </body>
 </html>
