--- a/views/header.html
+++ b/views/header.html
@@ -8,11 +8,8 @@
 <body>
 <main>
     <header id="header" class="header_elements">
-        <div id="first_year"><a href="">Première année</a></div>
-        <div id="second_year"><a href="">deuxième année</a></div>
-        <div id="register"><a href="/new_user">s'incrire</a></div>
-        <div  id="login"><a href="/login">connecter</a></div>
-        <div  id="sign_out"> <a href="/logout">déconnecter</a> </div>
-        <div  id="profile"> <a href="/logout">Mon compte</a> </div>
+        <div id="register"><a href="/new_user">s'inscrire</a></div>
+        <div  id="login"><a href="/login">se connecter</a></div>
+
 
     </header>
